# deserializer

./: README.md  pyproject.toml
src/deserializer/: __init__.py  defines.py  utils.py
tests/deserializer/: test__init__.py  test_utils.py
